Avances de estilos

--- a/Test.html
+++ b/Test.html
@@ -3,22 +3,45 @@
 <head>
     <meta charset="utf-8">
     <title>Horizonte Profesional</title>
+    <link rel="stylesheet" href="estilo1.css">
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <div class="logo">Horizonte Profesional</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="instrucciones.html">Test Vocacional</a></li>
+                <li><a href="opciones.html">Carreras</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="preguntas">
        <form>
         <fieldset>
             <legend>1-¿Qué actividad preferís hacer en tu tiempo libre?</legend>
-            <input id="checkbox1"type="radio" name="leer" value="Leer o investigar temas nuevos"
+            <input id="checkbox1"type="radio" name="leer" value="Leer o investigar temas nuevos">
             <label for="checkbox1">Leer o investigar temas nuevos</label><br>
-            <input id="checkbox2"type="radio" name="armar" value="Armar o reparar objetos "
+            <input id="checkbox2"type="radio" name="armar" value="Armar o reparar objetos ">
             <label for="checkbox2">Armar o reparar objetos </label><br>
-            <input id="checkbox3"type="radio" name="dibujar" value="Dibujar, pintar o crear algo nuevo"
+            <input id="checkbox3"type="radio" name="dibujar" value="Dibujar, pintar o crear algo nuevo">
             <label for="checkbox3">Dibujar, pintar o crear algo nuevo</label><br>
-            <input id="checkbox4"type="radio" name="organizar" value="Organizar cosas o ayudar a otros"
+            <input id="checkbox4"type="radio" name="organizar" value="Organizar cosas o ayudar a otros">
             <label for="checkbox4">Organizar cosas o ayudar a otros </label><br>
         </fieldset>
+        <fieldset>
+            <legend>2-¿Qué materia te gustaba más en la escuela? </legend>
+            <input id="checkbox-1"type="radio" name="Matemáticas" value="Matemáticas o física">
+            <label for="checkbox-1">Matemáticas o física</label><br>
+            <input id="checkbox-2"type="radio" name="Biologia" value="Biología o química">
+            <label for="checkbox-2">Biología o química</label><br>
+            <input id="checkbox-3"type="radio" name="Literatura" value="Literatura o arte">
+            <label for="checkbox-3">Literatura o arte </label><br>
+            <input id="checkbox-4"type="radio" name="Historia" value="Historia o educación cívica ">
+            <label for="checkbox-4">Historia o educación cívica</label><br>
+        </fieldset>
        </form> 
+
     </div>
 </body>
 </html>
