--- a/instrucciones.html
+++ b/instrucciones.html
@@ -3,21 +3,34 @@
 <head>
     <meta charset="utf-8">
     <title>Horizonte Profesional</title>
-
+    <link rel="stylesheet" href="estilo1.css">
 </head>
 <body>
-    <div class="imagen2">
-        <img src="./imagenes/instrucciones.jpg" alt="instrucciones">
+    <header>
+        <nav class="menu">
+            <div class="logo">Horizonte Profesional</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="instrucciones.html">Test Vocacional</a></li>
+                <li><a href="opciones.html">Carreras</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div>
+        <img class="imagen2" src="./imagenes/instrucciones.jpg" alt="instrucciones">
     </div>
     <div class="contenido2">
         <h1> instrucciones </h1>
-        <p>
-            Responde a cada afirmación basándote en tu opinión personal <br>
-            No puedes saltarte preguntas, pero puedes volver a ellas más adelante
-        </p>
+        
+    </div>
+    <div class="lista">
+        <ul>
+            <li>✓Responde a cada afirmación basándote en tu opinión personal</li> 
+            <li>✓No puedes saltarte preguntas, pero puedes volver a ellas más adelante</li>
+        </ul>
     </div>
     <div class="boton">
-        <button>iniciar Test</button>
+     <a href="Test.html">iniciar Test</a>
     </div>
 </body>
 </html>
