--- a/mas-opciones.html
+++ b/mas-opciones.html
@@ -18,40 +18,36 @@
     </header>
     <div class="contenido3">
         <h1>Carreras:</h1>
-        <p>
-        Procedemos a presentarte distintas carreras<br>
-        las cuales se encuentran en distintas areas y tienen objetivos distintos
-        </p>
     </div>
-    <div class="imagenes3">
+    <div class="imagenes5">
         <p>
-        Arquitectura
+        Ingenieria en sistemas
         </p>
-        <img src="./imagenes/arquitectura.jpg" alt="arquitectura">
+        <img src="./imagenes/que-hace-un-ingeniero-de-sistemas.jpg" alt="sistemas">
         <p>
-        Administracion<br>
-        de empresas
+        Ingenieria<br>
+        Industrial
         </p>
-        <img src="./imagenes/administracion-de-empresas.jpg" alt="administracion">
-        <p>
-        Comunicacion Social
-        </p>
-        <img src="./imagenes/comunicacion.jpg" alt="comunicacion">
+        <img src="./imagenes/ingind.jpg" alt="Industrial">
     </div>
-    <div class="imagenes4"
+    <div class="imagenes6"
         <p>
-        Derecho
+        Medicina
         </p>
-        <img src="./imagenes/derecho.jpg" alt="derecho">
+        <img src="./imagenes/medicina.jpg" alt="medicina">
         <p>
-        Diseño Grafico
+        Psicologia
         </p>
-        <img src="./imagenes/diseño grafico.jpg" alt="diseño">
+        <img src="./imagenes/psicologia.jpeg" alt="psicologia">
         <p>
-        Economia
+        Veterinaria
         </p>
-        <img src="./imagenes/tipos-de-economia.jpg" alt="economia"
+        <img src="./imagenes/veterinarian-check-ing-puppy-s-health-2.jpg" alt="Veterinaria">
+        <p>
+        Si no te sentis decidido<br>
+        te invitamos a hacer nuestro<br>
+        Test Vocacional
+        </p>
     </div>
 </body>
 </html>
-
