mas avances de css y ya agregue mas paginas

--- a/Test.html
+++ b/Test.html
@@ -20,28 +20,74 @@
        <form>
         <fieldset>
             <legend>1-¿Qué actividad preferís hacer en tu tiempo libre?</legend>
-            <input id="checkbox1"type="radio" name="leer" value="Leer o investigar temas nuevos">
+            <input id="checkbox1"type="radio" name="actividad" value="Leer o investigar temas nuevos">
             <label for="checkbox1">Leer o investigar temas nuevos</label><br>
-            <input id="checkbox2"type="radio" name="armar" value="Armar o reparar objetos ">
+            <input id="checkbox2"type="radio" name="actividad" value="Armar o reparar objetos ">
             <label for="checkbox2">Armar o reparar objetos </label><br>
-            <input id="checkbox3"type="radio" name="dibujar" value="Dibujar, pintar o crear algo nuevo">
+            <input id="checkbox3"type="radio" name="actividad" value="Dibujar, pintar o crear algo nuevo">
             <label for="checkbox3">Dibujar, pintar o crear algo nuevo</label><br>
-            <input id="checkbox4"type="radio" name="organizar" value="Organizar cosas o ayudar a otros">
+            <input id="checkbox4"type="radio" name="actividad" value="Organizar cosas o ayudar a otros">
             <label for="checkbox4">Organizar cosas o ayudar a otros </label><br>
         </fieldset>
         <fieldset>
             <legend>2-¿Qué materia te gustaba más en la escuela? </legend>
-            <input id="checkbox-1"type="radio" name="Matemáticas" value="Matemáticas o física">
+            <input id="checkbox-1"type="radio" name="actividad2" value="Matemáticas o física">
             <label for="checkbox-1">Matemáticas o física</label><br>
-            <input id="checkbox-2"type="radio" name="Biologia" value="Biología o química">
+            <input id="checkbox-2"type="radio" name="actividad2" value="Biología o química">
             <label for="checkbox-2">Biología o química</label><br>
-            <input id="checkbox-3"type="radio" name="Literatura" value="Literatura o arte">
+            <input id="checkbox-3"type="radio" name="actividad2" value="Literatura o arte">
             <label for="checkbox-3">Literatura o arte </label><br>
-            <input id="checkbox-4"type="radio" name="Historia" value="Historia o educación cívica ">
+            <input id="checkbox-4"type="radio" name="actividad2" value="Historia o educación cívica ">
             <label for="checkbox-4">Historia o educación cívica</label><br>
         </fieldset>
-       </form> 
-
+        <fieldset>
+            <legend>3-¿Con qué afirmación te sentís más identificado?</legend>
+            <input id="checkbox.1"type="radio" name="actividad3" value="Me gusta resolver problemas complejos ">
+            <label for="checkbox.1">Me gusta resolver problemas complejos </label><br>
+            <input id="checkbox.2"type="radio" name="actividad3" value="Me interesa cómo funciona el cuerpo humano  ">
+            <label for="checkbox.2">Me interesa cómo funciona el cuerpo humano </label><br>
+            <input id="checkbox.3"type="radio" name="actividad3" value="Me gusta expresarme a través del arte o el diseño ">
+            <label for="checkbox.3">Me gusta expresarme a través del arte o el diseño</label><br>
+            <input id="checkbox.4"type="radio" name="actividad3" value="Me gusta liderar, organizar o trabajar en grupo">
+            <label for="checkbox.4">Me gusta liderar, organizar o trabajar en grupo</label><br>
+        </fieldset>
+        <fieldset>
+            <legend>4-¿Qué tipo de tareas se te dan mejor? </legend>
+            <input id="checkbox.5"type="radio" name="actividad4" value="Analizar datos o hacer cálculos  ">
+            <label for="checkbox.5">Analizar datos o hacer cálculos</label><br>
+            <input id="checkbox.6"type="radio" name="actividad4" value="Armar cosas o usar herramientas">
+            <label for="checkbox.6">Armar cosas o usar herramientas</label><br>
+            <input id="checkbox.7"type="radio" name="actividad4" value=" Expresarte en público o escribir">
+            <label for="checkbox.7">Expresarte en público o escribir </label><br>
+            <input id="checkbox.8"type="radio" name="actividad4" value="Escuchar y ayudar a los demás">
+            <label for="checkbox.8">Escuchar y ayudar a los demás</label><br>
+        </fieldset>
+        <fieldset>
+            <legend> 5-¿Cómo preferís trabajar? </legend>
+            <input id="checkbox.9"type="radio" name="actividad5" value="Solo, con libertad para pensar">
+            <label for="checkbox.10">Solo, con libertad para pensar</label><br>
+            <input id="checkbox.11"type="radio" name="actividad5" value="Con las manos, en movimiento">
+            <label for="checkbox.12">Con las manos, en movimiento</label><br>
+            <input id="checkbox.13"type="radio" name="actividad5" value="En proyectos creativos y dinámicos  ">
+            <label for="checkbox.14">En proyectos creativos y dinámicos </label><br>
+            <input id="checkbox.15"type="radio" name="actividad5" value="En grupo, colaborando con otros">
+            <label for="checkbox.16">En grupo, colaborando con otros</label><br>
+        </fieldset> 
+        <fieldset>
+            <legend>6-¿Qué te gustaría lograr con tu trabajo en el futuro? </legend>
+            <input id="checkbox.17"type="radio" name="actividad6" value="Crear nuevas tecnologías o soluciones">
+            <label for="checkbox.18">Crear nuevas tecnologías o soluciones</label><br>
+            <input id="checkbox.19"type="radio" name="actividad6" value="Cuidar la salud o ayudar a las personas">
+            <label for="checkbox.20">Cuidar la salud o ayudar a las personas</label><br>
+            <input id="checkbox.21"type="radio" name="actividad6" value="Comunicar ideas o emociones">
+            <label for="checkbox.22">Comunicar ideas o emociones</label><br>
+            <input id="checkbox.23"type="radio" name="actividad6" value="Liderar equipos o tomar decisiones importantes  ">
+            <label for="checkbox.24">Liderar equipos o tomar decisiones importantes</label><br>
+        </fieldset>   
+       </form>
+    </div>
+    <div class="boton6">
+    <a href="Resultado.html">Resultado</a>
     </div>
 </body>
 </html>
