--- a/opciones.html
+++ b/opciones.html
@@ -52,6 +52,11 @@
         </p>
         <img src="./imagenes/tipos-de-economia.jpg" alt="economia"
     </div>
+    <div class="boton3">
+    <a href="mas-opciones.html">Siguiente</a>
+    </div>
 </body>
 </html>
+
+
 
