--- a/mas-opciones.html
+++ b/mas-opciones.html
@@ -16,38 +16,39 @@
             </ul>
         </nav>
     </header>
-    <div class="contenido3">
-        <h1>Carreras:</h1>
-    </div>
-    <div class="imagenes5">
-        <p>
-        Ingenieria en sistemas
-        </p>
-        <img src="./imagenes/que-hace-un-ingeniero-de-sistemas.jpg" alt="sistemas">
-        <p>
-        Ingenieria<br>
-        Industrial
-        </p>
-        <img src="./imagenes/ingind.jpg" alt="Industrial">
-    </div>
-    <div class="imagenes6"
-        <p>
-        Medicina
-        </p>
-        <img src="./imagenes/medicina.jpg" alt="medicina">
-        <p>
-        Psicologia
-        </p>
-        <img src="./imagenes/psicologia.jpeg" alt="psicologia">
-        <p>
-        Veterinaria
-        </p>
-        <img src="./imagenes/veterinarian-check-ing-puppy-s-health-2.jpg" alt="Veterinaria">
-        <p>
-        Si no te sentis decidido<br>
-        te invitamos a hacer nuestro<br>
-        Test Vocacional
-        </p>
-    </div>
-</body>
+ <div class="contenido3">
+    <h1 class="titulo">Carreras:</h1>
+ </div> 
+ <div class="imagenes5"> 
+    <p> 
+        Ingenieria en sistemas 
+    </p> 
+    <img src="./imagenes/que-hace-un-ingeniero-de-sistemas.jpg" alt="sistemas"> 
+    <p> Ingenieria<br> Industrial 
+    </p> <img src="./imagenes/ingind.jpg" alt="Industrial"> 
+    <p> 
+    Medicina 
+    </p> 
+    <img src="./imagenes/medicina.jpg" alt="medicina"> 
+ </div> 
+ <div class="imagenes6">
+    <p> 
+    Psicologia 
+    </p> 
+    <img src="./imagenes/psicologia.jpeg" alt="psicologia"> 
+    <p> 
+    Veterinaria 
+    </p> 
+    <img src="./imagenes/veterinarian-check-ing-puppy-s-health-2.jpg" alt="Veterinaria"> 
+    <p> 
+    Si no te sentis decidido<br> te invitamos a hacer nuestro<br> 
+    Test Vocacional 
+    </p> 
+ </div>
+ <div class="boton5">
+    <a href="instrucciones.html">Test Vocacional</a>
+ </div>
+</body> 
 </html>
+
+    
