Html  css casi terminado
mañana terminar java script

--- a/Comunicacion social.html
+++ b/Comunicacion social.html
@@ -19,31 +19,30 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Comunicacion social
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma profesionales capaces de analizar, producir y gestionar contenidos en medios tradicionales y digitales
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
+        Universidad Empresarial Siglo 21<br>
         Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Medios de comunicación (radio, TV, prensa, digital)<br>
+        Comunicación institucional o política<br>
+        Agencias de publicidad y RR.PP.<br>
+        Gestión de redes sociales y marketing digital<br>
+        Docencia e investigación<br>
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/comunicacion.jpg" alt="Comunicacion">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +50,3 @@
   </div>
 </body>
 </html>
-
-
-
