--- a/Derecho.html
+++ b/Derecho.html
@@ -19,31 +19,30 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Derecho
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Prepara profesionales en el conocimiento y aplicación de leyes. Los abogados interpretan normas, defienden derechos, resuelven conflictos y participan en procesos judiciales, civiles, penales, laborales y comerciales.
       </p>
       <p>
         Dónde estudiarla:<br>
-        Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Nacional Cordoba(UNC) 
+        Universidad Catolica Cordoba(UCC)
+        Universidad Siglo 21
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Ejercicio independiente<br>
+        Poder Judicial<br>
+        Asesoría legal en empresas<br>
+        Función pública<br>
+        Docencia e investigación
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/derecho.jpg" alt="Derecho">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +50,4 @@
   </div>
 </body>
 </html>
-
-
 
