--- a/Diseño.html
+++ b/Diseño.html
@@ -19,31 +19,30 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Diseño Grafico
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma diseñadores capaces de crear soluciones visuales a problemas de comunicación. Se trabaja con imagen, tipografía, color, interfaces, publicidad y diseño editorial, digital o de marcas.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Empresarial Siglo 21<br>
+        Escuela La Metro<br>
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Estudios de diseño o de manera freelance<br>
+        Agencias de publicidad o branding<br>
+        Diseño UX/UI, diseño web, packaging<br>
+        Editoriales y medios digitales<br>
+        Identidad visual de empresas<br>
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/diseño grafico.jpg" alt="Diseño">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +50,3 @@
   </div>
 </body>
 </html>
-
-
-
