--- a/Economia.html
+++ b/Economia.html
@@ -19,31 +19,30 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Economia
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Prepara profesionales para analizar fenómenos económicos, diseñar políticas públicas, asesorar empresas y prever escenarios financieros.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Empresarial Siglo 21<br>
+        Universidad Catolica Cordoba(UCC)<br>
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Consultoría económica y financiera<br>
+        Sector público<br>
+        Bancos y empresas privadas<br>
+        Investigación y docencia<br>
+        Organismos internacionales<br>
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/tipos-de-economia.jpg" alt="Economia">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +50,3 @@
   </div>
 </body>
 </html>
-
-
-
