--- a/Ingenieria Industrial.html
+++ b/Ingenieria Industrial.html
@@ -19,31 +19,32 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Ingenieria Industrial
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma ingenieros con capacidades para optimizar procesos productivos, logísticos y organizativos. Integra conocimientos técnicos con administración, economía y recursos humanos.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Empresarial Siglo 21<br>
+        Universidad Catolica Cordoba(UCC)<br>
+        Universidad Blas Pascal(UBP)<br>
+        Universidad Tecnica Nacional(UTN)
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+       Industrias de manufactura y servicios<br>
+       Logística, calidad, producción, planificación<br>
+       Gestión de proyectos<br>
+       Consultoría o liderazgo en empresas<br>
+       Sector público o emprendimientos
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/ingind.jpg" alt="Inenieria Industrial">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +52,3 @@
   </div>
 </body>
 </html>
-
-
-
