--- a/Ingenieria en Sistemas.html
+++ b/Ingenieria en Sistemas.html
@@ -19,31 +19,32 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Ingenieria en Sistemas
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma profesionales en el diseño, desarrollo y mantenimiento de sistemas informáticos. Integra programación, bases de datos, redes, inteligencia artificial y ciberseguridad.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Empresarial Siglo 21<br>
+        Universidad Catolica Cordoba(UCC)<br>
+        Universidad Blas Pascal(UBP)<br>
+        Universidad Tecnica Nacional(UTN)
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+       Desarrollo de software y aplicaciones<br>
+       Administración de sistemas y redes<br>
+       Seguridad informática<br>
+       Consultoría en tecnología<br>
+       Empleabilidad global y alta demanda
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/que-hace-un-ingeniero-de-sistemas.jpg" alt="Ingenieria en sistemas">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +52,3 @@
   </div>
 </body>
 </html>
-
-
-
