--- a/Medicina.html
+++ b/Medicina.html
@@ -19,31 +19,28 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Medicina
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Prepara médicos capacitados para prevenir, diagnosticar y tratar enfermedades. Es una carrera exigente, con fuerte formación científica, ética y práctica.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Catolica Cordoba(UCC)<br>
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Hospitales y clínicas<br>
+        Práctica médica particular<br>
+        Especialidades médicas<br>
+        Investigación biomédica y docencia<br>
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/medicina.jpg" alt="Medicina">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +48,3 @@
   </div>
 </body>
 </html>
-
-
-
