--- a/Psicologia.html
+++ b/Psicologia.html
@@ -19,31 +19,31 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Psicologia
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma profesionales que estudian el comportamiento humano y los procesos mentales. Pueden intervenir en salud mental, educación, empresas, justicia y comunidades.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Catolica Cordoba(UCC)<br>
+        Universidad Siglo21<br>
+        Universidad Blas Pascal(UBP)
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Clínica y consultorios particulares<br>
+        Hospitales y centros de salud mental<br>
+        Psicología educativa, laboral, judicial<br>
+        ONG y programas sociales<br>
+        Investigación y docencia
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/psicologia.jpeg" alt="Psicologia">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +51,3 @@
   </div>
 </body>
 </html>
-
-
-
