--- a/administracion.html
+++ b/administracion.html
@@ -19,31 +19,32 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Administracion de empresas
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        La carrera de Administración de Empresas forma profesionales capacitados para planificar, organizar, dirigir y controlar los recursos de una organización (ya sea pública o privada)
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
+        Universidad Empresarial Siglo 21<br>
         Universidad Blas Pascal (UBP)<br>
+        Universidad Católica de Córdoba (UCC)<br>
         Instituto Universitario Aeronáutico (IUA)
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+         Empresas privadas<br>
+         Consultoría y asesoramiento<br>
+         Emprendimiento propio<br>
+         Sector público y ONGs<br>
+         Docencia e investigación
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/administracion-de-empresas.jpg" alt="Administracion">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +52,3 @@
   </div>
 </body>
 </html>
-
-
-
