--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 Elegir tu camino no es fácil, pero no tenés que hacerlo solo.
             </p>
             <div class="botones">
-                <a href="instrucciones.html">Test vocacional</a>
-                <a href="opciones.html">Explorar carreras</a>
+                <a href="instrucciones.html"><button>Test vocacional</button></a>
+                <a href="opciones.html"><button>Explorar carreras</button></a>
             </div>
         </div>
     </div>
