--- a/mas-opciones.html
+++ b/mas-opciones.html
@@ -46,9 +46,11 @@
     </p> 
  </div>
  <div class="boton5">
-    <a href="instrucciones.html">Test Vocacional</a>
+    <a href="instrucciones.html"><button>Test Vocacional</button></a>
+    <a href="opciones.html"><button>volver</button></a>
  </div>
 </body> 
 </html>
+
 
     
