--- a/opciones.html
+++ b/opciones.html
@@ -53,10 +53,11 @@
         <img src="./imagenes/tipos-de-economia.jpg" alt="economia"
     </div>
     <div class="boton3">
-    <a href="mas-opciones.html">Siguiente</a>
+    <a href="mas-opciones.html"><button>Siguiente</button></a>
     </div>
 </body>
 </html>
+
 
 
 
