--- a/Veterinaria.html
+++ b/Veterinaria.html
@@ -19,31 +19,30 @@
   <div class="contenedor">
     <div class="contenido8">
       <p>
-        Arquitectura
+        Veterinaria
       </p>
       <p>
-        La carrera de Arquitectura forma profesionales capaces de diseñar, proyectar y construir espacios que respondan a las necesidades humanas, combinando funcionalidad, estética y sostenibilidad.
+        Forma profesionales para el cuidado, prevención y tratamiento de enfermedades en animales. También se abordan temas de producción animal, salud pública y medio ambiente.
       </p>
       <p>
         Dónde estudiarla:<br>
         Universidad Nacional de Córdoba (UNC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Católica de Córdoba (UCC)<br>
-        Universidad Blas Pascal (UBP)<br>
-        Instituto Universitario Aeronáutico (IUA)
+        Universidad Catolica Cordoba(UCC)<br>
+        Universidad Nacional Villa Maria
       </p>
       <p>
         Salida laboral:<br>
-         Ejercicio independiente (freelance o estudio propio)<br>
-         Trabajo en estudios o empresas<br>
-         Sector público<br>
-         Docencia e investigación<br>
+        Clínicas veterinarias<br>
+        Producción ganadera y agroindustria<br>
+        Laboratorio y control sanitario<br>
+        Salud pública y zoonosis<br>
+        Docencia e investigación
       </p>
       <p>Link video</p>
     
     </div>
     <div class="imagen8">
-      <img src="imagenes/arquitectura.jpg" alt="arquitectura">
+      <img src="imagenes/veterinarian-check-ing-puppy-s-health-2.jpg" alt="Veterinaria">
     </div>
     <div class="boton9">
       <a href="Resultado.html"><button>volver</button></a>
@@ -51,6 +50,3 @@
   </div>
 </body>
 </html>
-
-
-
