--- a/Resultado.html
+++ b/Resultado.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Horizonte Profesional</title>
     <link rel="stylesheet" href="estilo1.css">
+    <script src="funciones.js"></script>
+
 </head>
-<body>
+<body onload="cargarresultado()">
     <header>
         <nav class="menu">
             <div class="logo">Horizonte Profesional</div>
@@ -26,7 +28,9 @@
         el área profesional que más se ajusta a tu perfil es:
         </p>
     </div>
-    <div class="botones7">
+    <div id="resultado">
+
     </div>
+
 </body>
 </html>
