--- a/Test.html
+++ b/Test.html
@@ -85,7 +85,7 @@
             <input id="checkbox.23"type="radio" name="actividad6" value="Liderar equipos o tomar decisiones importantes  ">
             <label for="checkbox.24">Liderar equipos o tomar decisiones importantes</label><br>
         </fieldset>
-        <button type="button" onclick="enviarEncuesta()">Resultado</button>  
+        <button class="botonencuesta" type="button" onclick="enviarEncuesta()">Resultado</button>  
        </form>
     </div>
 </body>
