--- a/Comunicacion social.html
+++ b/Comunicacion social.html
@@ -38,14 +38,19 @@
         Gestión de redes sociales y marketing digital<br>
         Docencia e investigación<br>
       </p>
-      <p>Link video</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sda8eovHSYg?si=2QTyMZ7v1-Y0uIpN" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
     
     </div>
     <div class="imagen8">
       <img src="imagenes/comunicacion.jpg" alt="Comunicacion">
     </div>
     <div class="boton9">
-      <a href="Resultado.html"><button>volver</button></a>
+      <a href="opciones.html"><button class="btn">volver</button></a>
     </div>
   </div>
 </body>
