--- a/Derecho.html
+++ b/Derecho.html
@@ -38,14 +38,19 @@
         Función pública<br>
         Docencia e investigación
       </p>
-      <p>Link video</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Zv3t4LDh1Zo?si=WiUnyGuYbT0MmVbI" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
     
     </div>
     <div class="imagen8">
       <img src="imagenes/derecho.jpg" alt="Derecho">
     </div>
     <div class="boton9">
-      <a href="Resultado.html"><button>volver</button></a>
+      <a href="opciones.html"><button class="btn">volver</button></a>
     </div>
   </div>
 </body>
