--- a/Diseño.html
+++ b/Diseño.html
@@ -38,14 +38,19 @@
         Editoriales y medios digitales<br>
         Identidad visual de empresas<br>
       </p>
-      <p>Link video</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sg33qZi8BGI?si=jOw7_rCRP9AjaB1f" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
     
     </div>
     <div class="imagen8">
       <img src="imagenes/diseño grafico.jpg" alt="Diseño">
     </div>
     <div class="boton9">
-      <a href="Resultado.html"><button>volver</button></a>
+      <a href="opciones.html"><button class="btn">volver</button></a>
     </div>
   </div>
 </body>
