--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                 En esta página vas a encontrar un test vocacional, información sobre distintas carreras y recursos que te van a ayudar a conocerte mejor y tomar decisiones con más confianza. 
                 Elegir tu camino no es fácil, pero no tenés que hacerlo solo.
             </p>
-            <div class="botones">
-                <a href="instrucciones.html"><button>Test vocacional</button></a>
-                <a href="opciones.html"><button>Explorar carreras</button></a>
-            </div>
+    <a href="instrucciones.html"><button class="btn">Test vocacional</button></a>
+    <a href="opciones.html"><button class="btn">Explorar carreras</button></a>
+    
         </div>
     </div>
 </body>
