--- a/instrucciones.html
+++ b/instrucciones.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <div class="boton">
-     <a href="Test.html"><button>Iniciar Test</button></a>
+     <a href="Test.html"><button class="btn">Iniciar Test</button></a>
     </div>
 </body>
 </html>
