--- a/mas-opciones.html
+++ b/mas-opciones.html
@@ -21,23 +21,24 @@
  </div> 
  <div class="imagenes5"> 
     <p> 
-        Ingenieria en sistemas 
+    <a href="Ingenieria en Sistemas.html"><button class="btnrama">Ingenieria en sistemas</button></a> 
     </p> 
     <img src="./imagenes/que-hace-un-ingeniero-de-sistemas.jpg" alt="sistemas"> 
-    <p> Ingenieria<br> Industrial 
+    <p> 
+    <a href="Ingenieria Industrial.html"><button class="btnrama">Ingenieria industrial</button></a>
     </p> <img src="./imagenes/ingind.jpg" alt="Industrial"> 
     <p> 
-    Medicina 
+    <a href="Medicina.html"><button class="btnrama">Medicina</button></a> 
     </p> 
     <img src="./imagenes/medicina.jpg" alt="medicina"> 
  </div> 
  <div class="imagenes6">
     <p> 
-    Psicologia 
+    <a href="Psicologia.html"><button class="btnrama">Psicologia</button></a> 
     </p> 
     <img src="./imagenes/psicologia.jpeg" alt="psicologia"> 
     <p> 
-    Veterinaria 
+    <a href="Veterinaria.html"><button class="btnrama">Veterinaria</button></a> 
     </p> 
     <img src="./imagenes/veterinarian-check-ing-puppy-s-health-2.jpg" alt="Veterinaria"> 
     <p> 
@@ -46,8 +47,8 @@
     </p> 
  </div>
  <div class="boton5">
-    <a href="instrucciones.html"><button>Test Vocacional</button></a>
-    <a href="opciones.html"><button>volver</button></a>
+    <a href="instrucciones.html"><button class="btn">Test Vocacional</button></a>
+    <a href="opciones.html"><button class="btn">volver</button></a>
  </div>
 </body> 
 </html>
