--- a/opciones.html
+++ b/opciones.html
@@ -25,35 +25,34 @@
     </div>
     <div class="imagenes3">
         <p>
-        Arquitectura
+        <a href="Carrera.html"><button class="btnrama">Arquitectura</button></a>
         </p>
         <img src="./imagenes/arquitectura.jpg" alt="arquitectura">
         <p>
-        Administracion<br>
-        de empresas
+        <a href="administracion.html"><button class="btnrama">Administracion de<br>empresas</button></a>
         </p>
         <img src="./imagenes/administracion-de-empresas.jpg" alt="administracion">
         <p>
-        Comunicacion Social
+        <a href="Comunicacion social.html"><button class="btnrama">Comunicacion Social</button></a>
         </p>
         <img src="./imagenes/comunicacion.jpg" alt="comunicacion">
     </div>
     <div class="imagenes4"
         <p>
-        Derecho
+        <a href="Derecho.html"><button class="btnrama">Derecho</button></a>
         </p>
         <img src="./imagenes/derecho.jpg" alt="derecho">
         <p>
-        Diseño Grafico
+        <a href="Diseño.html"><button class="btnrama">Diseño Grafico</button></a>
         </p>
         <img src="./imagenes/diseño grafico.jpg" alt="diseño">
         <p>
-        Economia
+        <a href="Economia.html"><button class="btnrama">Economia</button></a>
         </p>
         <img src="./imagenes/tipos-de-economia.jpg" alt="economia"
     </div>
     <div class="boton3">
-    <a href="mas-opciones.html"><button>Siguiente</button></a>
+    <a href="mas-opciones.html"><button class="btn">Siguiente</button></a>
     </div>
 </body>
 </html>
