--- a/Carrera.html
+++ b/Carrera.html
@@ -39,14 +39,19 @@
          Sector público<br>
          Docencia e investigación<br>
       </p>
-      <p>Link video</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UnWgVE8jCZQ?si=ItZ2t02DYh6h9YNh" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
     
     </div>
     <div class="imagen8">
       <img src="imagenes/arquitectura.jpg" alt="arquitectura">
     </div>
     <div class="boton9">
-      <a href="Resultado.html"><button>volver</button></a>
+      <a href="opciones.html"><button class="btn">volver</button></a>
     </div>
   </div>
 </body>
