--- a/Psicologia.html
+++ b/Psicologia.html
@@ -39,14 +39,19 @@
         ONG y programas sociales<br>
         Investigación y docencia
       </p>
-      <p>Link video</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LxfBHhtBXZI?si=CqE6UxkjJaV7E-nX" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </p>
     
     </div>
     <div class="imagen8">
       <img src="imagenes/psicologia.jpeg" alt="Psicologia">
     </div>
     <div class="boton9">
-      <a href="Resultado.html"><button>volver</button></a>
+      <a href="opciones.html"><button class="btn">volver</button></a>
     </div>
   </div>
 </body>
